crates/guest-macros/tests/compile_fail/missing_provider.rs
omnia_guest_macros::guest!({
    owner: "examples",
});

fn main() {}
